--- a/groucho-core/pom.xml
+++ b/groucho-core/pom.xml
@@ -136,6 +136,18 @@
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>${maven-jar-plugin.version}</version>
+        	<executions>
+          		<execution>
+            		<goals>
+            			<goal>test-jar</goal>
+            		</goals>
+          		</execution>
+        	</executions> 
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>${maven-compiler-plugin.version}</version>
             <configuration>
