--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -82,12 +82,21 @@
 			<artifactId>groucho-core</artifactId>
 			<version>${groucho-core.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>it.cnr.iasi.saks.groucho</groupId>
+			<artifactId>groucho-core</artifactId>
+			<version>${groucho-core.version}</version>
+	        <classifier>tests</classifier>
+      		<type>test-jar</type>
+      		<scope>test</scope>
+    	</dependency>
 
- 		<dependency> 
- 			<groupId>it.cnr.iasi.saks.groucho</groupId> 
- 			<artifactId>groucho-lsh-rest</artifactId> 
- 			<version>${groucho-lsh-rest.version}</version> 
- 		</dependency> 
+<!--  		<dependency>  -->
+<!--  			<groupId>it.cnr.iasi.saks.groucho</groupId>  -->
+<!--  			<artifactId>groucho-lsh-rest</artifactId>  -->
+<!--  			<version>${groucho-lsh-rest.version}</version>  -->
+<!--  		</dependency>  -->
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -118,7 +127,6 @@
 			<groupId>org.apache.jcs</groupId>
 			<artifactId>jcs</artifactId>
 			<version>1.3</version>
-			<type>pom</type>
 		</dependency>
 	</dependencies>
 
@@ -208,4 +216,56 @@
 			</plugin>									
 		</plugins>
 	</build>
+	
+<profiles>
+    <profile>
+      <id>experimentsProfile</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+<!-- 				<version>2.18.1</version> -->
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+<!-- 		          <includes> -->
+<!--         		    <include>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.*</include> -->
+<!--             	  </includes> -->
+		          <excludes>
+        		    <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.it.*</exclude>
+            	  </excludes>
+					<reuseForks>false</reuseForks>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
+					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>					
+					<argLine>
+						-Xmx4G -agentpath:${groucho-crochet.build.directory}/libtagging.so
+						-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+						-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+					@{argLine}
+						-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
+						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
+<!-- -->
+						-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
+						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties												
+					</argLine>
+				</configuration>
+			</plugin>									
+		</plugins>
+      </build>
+    </profile>
+  </profiles>    	
 </project>
