--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -200,6 +200,9 @@
 					</execution>
 				</executions>
 				<configuration>
+		            <excludes>
+        		      <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.*</exclude>
+            	    </excludes>				
 					<reuseForks>false</reuseForks>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
 					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>					
