--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -42,7 +42,7 @@
 
 
 	<properties>
-		<junit.version>4.0</junit.version>
+		<junit.version>4.11</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -55,6 +55,8 @@
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+
+		<mockito-core.version>3.3.3</mockito-core.version>
 
 		<groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
 		<groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
@@ -102,6 +104,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+  			<groupId>org.mockito</groupId>
+  			<artifactId>mockito-core</artifactId>
+  			<version>${mockito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -228,6 +237,14 @@
       </activation>
       <build>
         <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire.version}</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>        
 		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -245,6 +262,7 @@
 				<configuration>
 		          <excludes>
         		    <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.it.**</exclude>
+<!--         		    <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.*</exclude> -->
             	  </excludes>
 					<reuseForks>false</reuseForks>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
