--- a/groucho-lab/src/test/resources/testingConfExperiments.properties
+++ b/groucho-lab/src/test/resources/testingConfExperiments.properties
@@ -1,3 +1,3 @@
 groucho.governance.manager.class=it.cnr.iasi.saks.groucho.performanceOverheadTest.TestGovernanceManager_ActivationWithProbability
 groucho.lab.intrument.jsonFile=modelResourceExperiments.json
-groucho.transformer.disable.classesList=org/objectweb/asm,com/fasterxml/jackson,javax,org/mockito
+groucho.transformer.disable.classesList=org/objectweb/asm,com/fasterxml/jackson,org/apache/log4j,javax,org/mockito
