--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -52,11 +52,13 @@
 
 		<maven-surefire.version>3.0.0-M4</maven-surefire.version>
 
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
 
 		<mockito-core.version>3.3.3</mockito-core.version>
+
+		<evosuite.version>1.0.6</evosuite.version>
 
 		<groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
 		<groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
@@ -69,13 +71,14 @@
 
 		<groucho-core.build.directory>${basedir}/../groucho-core/target</groucho-core.build.directory>
 		<groucho-core.build.finalName>groucho-core-1.0-SNAPSHOT</groucho-core.build.finalName>
-		
-<!-- 		<groucho-lab.build.depencenciesDirectory>${basedir}/../groucho-lab/target/libs</groucho-lab.build.depencenciesDirectory> -->
+
+		<!-- <groucho-lab.build.depencenciesDirectory>${basedir}/../groucho-lab/target/libs</groucho-lab.build.depencenciesDirectory> -->
 		<groucho-lab.build.depencenciesDirectory>${project.build.directory}/dependency</groucho-lab.build.depencenciesDirectory>
-		
-		
-<!--         argLine must be defined, otherwise surfire/failsafe will broke the build when using @{argLine} (see **HERE-ARG-LINE**) -->
-        <argLine></argLine>
+
+
+		<!-- argLine must be defined, otherwise surfire/failsafe will broke the 
+			build when using @{argLine} (see **HERE-ARG-LINE**) -->
+		<argLine></argLine>
 	</properties>
 
 	<dependencies>
@@ -84,21 +87,21 @@
 			<artifactId>groucho-core</artifactId>
 			<version>${groucho-core.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>it.cnr.iasi.saks.groucho</groupId>
 			<artifactId>groucho-core</artifactId>
 			<version>${groucho-core.version}</version>
-	        <classifier>tests</classifier>
-      		<type>test-jar</type>
-      		<scope>test</scope>
-    	</dependency>
+			<classifier>tests</classifier>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 
- 		<dependency> 
- 			<groupId>it.cnr.iasi.saks.groucho</groupId> 
- 			<artifactId>groucho-lsh-rest</artifactId> 
- 			<version>${groucho-lsh-rest.version}</version> 
- 		</dependency> 
+		<dependency>
+			<groupId>it.cnr.iasi.saks.groucho</groupId>
+			<artifactId>groucho-lsh-rest</artifactId>
+			<version>${groucho-lsh-rest.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -108,9 +111,9 @@
 		</dependency>
 
 		<dependency>
-  			<groupId>org.mockito</groupId>
-  			<artifactId>mockito-core</artifactId>
-  			<version>${mockito-core.version}</version>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -149,32 +152,32 @@
 						<id>copy-dependencies</id>
 						<phase>prepare-package</phase>
 						<goals>
-              				<goal>copy-dependencies</goal>
+							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
 							<artifactItems>
 								<artifactItem>
 									<outputDirectory>${groucho-lab.build.depencenciesDirectory}</outputDirectory>
-					                <overWriteReleases>false</overWriteReleases>
-					                <overWriteSnapshots>false</overWriteSnapshots>
-					                <overWriteIfNewer>true</overWriteIfNewer>									
+									<overWriteReleases>false</overWriteReleases>
+									<overWriteSnapshots>false</overWriteSnapshots>
+									<overWriteIfNewer>true</overWriteIfNewer>
 								</artifactItem>
 							</artifactItems>
 							<!-- other configurations here -->
 						</configuration>
-					</execution>					
+					</execution>
 				</executions>
-			</plugin>				
-        	<plugin>
-            	<groupId>org.apache.maven.plugins</groupId>
-                	<artifactId>maven-jar-plugin</artifactId>
-                	<version>${maven-jar-plugin.version}</version>
-                	<configuration>
-                    	<archive>
-                        	<manifestFile>${basedir}/resources/META-INF/MANIFEST.MF</manifestFile>
-                    	</archive>
-               		</configuration>
-        	</plugin>		
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
+				<configuration>
+					<archive>
+						<manifestFile>${basedir}/resources/META-INF/MANIFEST.MF</manifestFile>
+					</archive>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -189,16 +192,17 @@
 				<configuration>
 					<reuseForks>false</reuseForks>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
-<!-- 					This is the place-holder **HERE-ARG-LINE** -->
-					<argLine>@{argLine} -Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConf.properties
+					<!-- This is the place-holder **HERE-ARG-LINE** -->
+					<argLine>@{argLine}
+						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConf.properties
 					</argLine>
 				</configuration>
 			</plugin>
-		<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
-<!-- 				<version>2.18.1</version> -->
+				<!-- <version>2.18.1</version> -->
 				<version>2.19.1</version>
 				<executions>
 					<execution>
@@ -209,80 +213,106 @@
 					</execution>
 				</executions>
 				<configuration>
-		            <excludes>
-        		      <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.**</exclude>
-            	    </excludes>				
+					<excludes>
+						<exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.**</exclude>
+					</excludes>
 					<reuseForks>false</reuseForks>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
-					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>					
+					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>
 					<argLine>
-						-Xmx4G -agentpath:${groucho-crochet.build.directory}/libtagging.so
+						-Xmx4G
+						-agentpath:${groucho-crochet.build.directory}/libtagging.so
 						-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
 						-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
-					@{argLine}
+						@{argLine}
 						-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
 						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
 						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConf.properties
 					</argLine>
 				</configuration>
-			</plugin>									
+			</plugin>
 		</plugins>
 	</build>
-	
-<profiles>
-    <profile>
-      <id>experimentsProfile</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire.version}</version>
-        <configuration>
-          <skipTests>true</skipTests>
-        </configuration>
-      </plugin>        
-		<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
-<!-- 				<version>2.18.1</version> -->
-				<version>2.19.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-		          <excludes>
-        		    <exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.it.**</exclude>
-            	  </excludes>
-					<reuseForks>false</reuseForks>
-					<useUnlimitedThreads>true</useUnlimitedThreads>
-					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>					
-					<argLine>
-						-Xmx4G -agentpath:${groucho-crochet.build.directory}/libtagging.so
-						-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
-						-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
-					@{argLine}
-						-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
-						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
-						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
-<!-- -->
-						-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
-						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
-						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties												
-					</argLine>
-				</configuration>
-			</plugin>									
-		</plugins>
-      </build>
-    </profile>
-  </profiles>    	
+
+	<profiles>
+		<profile>
+			<id>experimentsProfile</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire.version}</version>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+						<!-- <version>2.18.1</version> -->
+						<version>2.19.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<excludes>
+								<exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.it.**</exclude>
+							</excludes>
+							<reuseForks>false</reuseForks>
+							<useUnlimitedThreads>true</useUnlimitedThreads>
+							<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>
+							<argLine>
+								-Xmx4G
+								-agentpath:${groucho-crochet.build.directory}/libtagging.so
+								-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+								-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+								@{argLine}
+								-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
+								-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+								-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
+								<!-- -->
+								-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
+								-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+								-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
+							</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<!-- -->
+		<profile>
+			<id>generateTestStubsProfile</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.evosuite.plugins</groupId>
+						<artifactId>evosuite-maven-plugin</artifactId>
+						<version>${evosuite.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal> generate </goal>
+								</goals>
+								<phase> process-test-classes </phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
